some importants modifications to the system

--- a/turbotequila/templates/definitions.html
+++ b/turbotequila/templates/definitions.html
@@ -10,7 +10,7 @@
       <li><a href="${tg.url('/about')}" class="${('', 'active')[defined('page') and page=='about']}">About</a></li>
             
       <span py:if="tg.auth_stack_enabled" py:strip="True">
-	<li py:if="request.identity" id="login" class="loginlogout"><a href="${tg.url('/users')}">Admin</a></li>
+	<li py:if="request.identity" id="login" class="loginlogout"><a href="${tg.url('/admin')}">Admin</a></li>
 	<li py:if="not request.identity" id="login" class="loginlogout"><a href="${tg.url('/login')}">Login</a></li>
 	<li py:if="request.identity" id="login" class="loginlogout"><a href="${tg.url('/login/out')}">Logout</a></li>
 	
