--- a/turbotequila/public/css/admin.css
+++ b/turbotequila/public/css/admin.css
@@ -60,3 +60,8 @@ a.edit_link{
 .crud_edit select, .crud_add select{
     width: 15em;
 }
+
+/* disable (hide) the crud_search */
+#crud_search {
+    display:none;
+}
